[package]
name = "ioctl-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
enum-utils = "0.1.2"
errno = "0.2.7"
hex = "0.4.3"
libc = "0.2.104"
nix = "0.23.0"
structopt = "0.3.25"
