[package]
name = "ioctl-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
derive_more = "0.99.14"
enum-utils = "0.1.2"
errno = "0.2.7"
hex = "0.4.3"
libc = "0.2.104"
nix = "0.23.0"
proc-macro2 = "1.0.27"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.25"
syn = "1.0.73"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
